--- a/bib.bib
+++ b/bib.bib
@@ -685,6 +685,14 @@ url = {http://portal.acm.org/citation.cfm?doid=1167838.1167860},
 volume = {49},
 year = {2006}
 }
+@book{Cline2012,
+author = {Cline, Ernest},
+isbn = {0099560437},
+pages = {384},
+publisher = {Arrow},
+title = {{Ready Player One}},
+year = {2012}
+}
 @article{Coleman2009,
 abstract = {This article discusses several networked media projects that use sensor technology to transmit data from real-world environments to virtual environments. The Eolus One project uses an experimental virtual control room to run building systems and provide a better communication network among its users. A 3D application design group called green phosphor creates code for translating n-dimensional information into 3D interactive formats for real-time effects. The Parsec voice controller system uses sonic inputs to control 3D graphical objects on the second life virtual platform. This article focuses on the design principles applied by the three projects at this experimental stage of x-reality design.},
 annote = {        From Duplicate 1 (                           Using Sensor Inputs to Affect Virtual and Real Environments                         - Coleman, Beth )
