--- a/03_background/literature_review.tex
+++ b/03_background/literature_review.tex
@@ -475,9 +475,15 @@ Should a bidirectional information flow be introduced to a PR system, or the abi
 %(Life on the Screen, p219
 \newcommand{\turklevrfootnote}{\footnote{\textit{``For virtual reality to be interesting it has to emulate the real. But you have to be able to do something in the virtual that you couldn't in the real.''}~\cite{Turkle1997}}}
 
-When discussing a PR system that allows a user to transition between two environments, one real \& the other virtual, one must consider the relationship between the two environments, namely whether (\& if so, how much) their layout, dimensions \& content relate to each other $-$ their \textit{spatial equivalence}. One could apply the notions of Baudrillard's Simulacra \& Simulation~\cite{Baudrillard1994} to this consideration, with complete spatial equivalence occupying Baudrillard's first stage of a faithful image or copy of a profound reality, zero spatial equivalence occupying the fourth stage, of pure simulation with no relation to anything in reality \& partial equivalence perhaps occupying the second stage, a perversion of reality.
+When discussing a PR system that allows a user to transition between two environments, one real \& the other virtual, one must consider the relationship between the two environments, namely whether (\& if so, how much) their layout, dimensions \& content relate to each other $-$ their \textit{spatial equivalence}.
 
-A PR system would be unrewarding if the real \& virtual environments were identical\turklevrfootnote{}. However a virtual environment that shares roughly the same fundamental dimensions \& layout as the real environment (it represents the same `place') but presents an alternative representation has been proven to be a useful modality in previous XR research (see section \ref{sec_crossreality}) \& it is this arrangement that the systems developed by this thesis focus on, in particular those where the virtual environment represents the same place as the real environment but at an earlier moment in time.
+This distinction lays partly upon whether one adopts a dualistic concept of virtual space experience, wherein `cyberspace' is a space in its own right with its own logic \& metaphysics thus capable of playing host to any number of fantastical things \& places, or whether one restricts the virtual environment by following a positivistic understanding of virtual space in which it serves only as a representation of real - using cyberspace for \textit{``creating acceptable substitutes for real \ldots environments''} instead of for \textit{``constructing imaginary worlds that are indistinguishable from the real world''}~\cite{Qvortrup2002}.
+
+One may also wish to consider this distinction in relation to the different stages identified by Baudrillard between simulacra \& simulation, with complete spatial equivalence occupying the first stage of a faithful image or copy of a profound reality (the positivistic position), zero spatial equivalence occupying the fourth stage of pure simulation with no relation to anything in reality (the dualistic position) \& partial equivalence perhaps occupying the second stage, a perversion of reality~\cite{Baudrillard1994}.
+
+%=========================================================================================================
+
+However one wants to treat virtual space, a PR system would be unrewarding if the real \& virtual environments were identical\turklevrfootnote{}. However a virtual environment that shares roughly the same fundamental dimensions \& layout as the real environment (it represents the same `place') but presents an alternative representation has been proven to be a useful modality in previous XR research (see section \ref{sec_crossreality}) \& it is this arrangement that the systems developed by this thesis focus on, in particular those where the virtual environment represents the same place as the real environment but at an earlier moment in time.
 
 One might consider the `Second Earth' concept to be the ultimate realisation of this scenario of spatially equivalent real and virtual environments. The combination of virtual world technology (as in Second Life) with `mirror world' technology (as in Google Earth), Second Earth theorises a virtual simulation/reconstruction of the entire physical world, such that for any location in the real world there is a corresponding location in the virtual world~\cite{Roush2007}. The systems developed in this thesis focus on a single small location, however it does not take a great leap of imagination to understand the worth of such a system scaled to larger, even global, sizes.
 
@@ -547,7 +553,7 @@ The OASIS is similar to Snow Crash's Metaverse; a fictional multi-user 3D enviro
 %=========================================================================================================
 %=========================================================================================================
 
-\pagebreak
+%\pagebreak
 %next section was rendering off the page
 
 \section{Presence}
